include_ver_2_beta_2/freetype.h

  
  typedef int  FT_Error;
  typedef struct FT_LibraryRec_  *FT_Library;
  EXPORT_DEF
  void  FT_Translate_Outline( FT_Outline*  outline,
                              FT_Pos       xOffset,
                              FT_Pos       yOffset );
  EXPORT_DEF
  FT_Error  FT_Set_Raster( FT_Library            library,
                           FT_Raster_Interface*  interface,
                           FT_Raster             raster );
  EXPORT_DEF
  FT_Error  FT_Set_Raster_Mode( FT_Library    library,
                                FT_Glyph_Tag  format,
                                const char*   mode,
                                const char*   args );