lib/src/generated_bindings2.dart


  late final _FT_Translate_OutlinePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<FT_Outline>, FT_Pos,
              FT_Pos)>>('FT_Translate_Outline');
  late final _FT_Translate_Outline = _FT_Translate_OutlinePtr.asFunction<
      void Function(ffi.Pointer<FT_Outline>, int, int)>();

  /// /
  int FT_Set_Raster(
    FT_Library library1,
    ffi.Pointer<FT_Raster_Interface> interface1,
    FT_Raster raster,
  ) {
    return _FT_Set_Raster(
      library1,
      interface1,
      raster,
    );
  }

  late final _FT_Set_RasterPtr = _lookup<
      ffi.NativeFunction<
          FT_Error Function(FT_Library, ffi.Pointer<FT_Raster_Interface>,
              FT_Raster)>>('FT_Set_Raster');
  late final _FT_Set_Raster = _FT_Set_RasterPtr.asFunction<
      int Function(FT_Library, ffi.Pointer<FT_Raster_Interface>, FT_Raster)>();

  /// /
  int FT_Set_Raster_Mode(
    FT_Library library1,
    int format,
    ffi.Pointer<ffi.Char> mode,
    ffi.Pointer<ffi.Char> args,
  ) {
    return _FT_Set_Raster_Mode(
      library1,
      format,
      mode,
      args,
    );
  }

  late final _FT_Set_Raster_ModePtr = _lookup<
      ffi.NativeFunction<
          FT_Error Function(FT_Library, ffi.Int32, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('FT_Set_Raster_Mode');
  late final _FT_Set_Raster_Mode = _FT_Set_Raster_ModePtr.asFunction<
      int Function(
          FT_Library, int, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();
}

final class FT_MemoryRec_ extends ffi.Struct {
  external ffi.Pointer<ffi.Void> user;

  external FT_Alloc_Func alloc;

  external FT_Free_Func free;

  external FT_Realloc_Func realloc;
}

typedef FT_Alloc_Func = ffi.Pointer<ffi.NativeFunction<FT_Alloc_FuncFunction>>;
typedef FT_Alloc_FuncFunction = ffi.Pointer<ffi.Void> Function(
    FT_Memory memory, ffi.Long size);
typedef DartFT_Alloc_FuncFunction = ffi.Pointer<ffi.Void> Function(
    FT_Memory memory, int size);

/// M E M O R Y   M A N A G E M E N T
typedef FT_Memory = ffi.Pointer<FT_MemoryRec_>;
typedef FT_Free_Func = ffi.Pointer<ffi.NativeFunction<FT_Free_FuncFunction>>;
typedef FT_Free_FuncFunction = ffi.Void Function(
    FT_Memory memory, ffi.Pointer<ffi.Void> block);
typedef DartFT_Free_FuncFunction = void Function(
    FT_Memory memory, ffi.Pointer<ffi.Void> block);
typedef FT_Realloc_Func
    = ffi.Pointer<ffi.NativeFunction<FT_Realloc_FuncFunction>>;
typedef FT_Realloc_FuncFunction = ffi.Pointer<ffi.Void> Function(
    FT_Memory memory,
    ffi.Long cur_size,
    ffi.Long new_size,
    ffi.Pointer<ffi.Void> block);
typedef DartFT_Realloc_FuncFunction = ffi.Pointer<ffi.Void> Function(
    FT_Memory memory, int cur_size, int new_size, ffi.Pointer<ffi.Void> block);

/// I / O   M A N A G E M E N T
final class FT_StreamDesc_ extends ffi.Union {
  @ffi.Long()
  external int value;

  external ffi.Pointer<ffi.Void> pointer;
}

final class FT_StreamRec_ extends ffi.Struct {
  external ffi.Pointer<ffi.Char> base;

  @ffi.UnsignedLong()
  external int size;

  @ffi.UnsignedLong()
  external int pos;

  external FT_StreamDesc descriptor;

  external FT_StreamDesc pathname;

  external FT_Stream_IO read;

  external FT_Stream_Close close;

  external FT_Memory memory;

  external ffi.Pointer<ffi.Char> cursor;

  external ffi.Pointer<ffi.Char> limit;
}

/// I / O   M A N A G E M E N T
typedef FT_StreamDesc = FT_StreamDesc_;
typedef FT_Stream_IO = ffi.Pointer<ffi.NativeFunction<FT_Stream_IOFunction>>;
typedef FT_Stream_IOFunction = ffi.UnsignedLong Function(
    FT_Stream stream,
    ffi.UnsignedLong offset,
    ffi.Pointer<ffi.Char> buffer,
    ffi.UnsignedLong count);
typedef DartFT_Stream_IOFunction = int Function(
    FT_Stream stream, int offset, ffi.Pointer<ffi.Char> buffer, int count);
typedef FT_Stream = ffi.Pointer<FT_StreamRec_>;
typedef FT_Stream_Close
    = ffi.Pointer<ffi.NativeFunction<FT_Stream_CloseFunction>>;
typedef FT_Stream_CloseFunction = ffi.Void Function(FT_Stream stream);
typedef DartFT_Stream_CloseFunction = void Function(FT_Stream stream);

final class FT_Vector_ extends ffi.Struct {
  @FT_Pos()
  external int x;

  @FT_Pos()
  external int y;
}

/// /
typedef FT_Pos = ffi.Long;
typedef DartFT_Pos = int;

/// <Enum>
/// FT_Pixel_Mode
///
/// <Description>
/// An enumeration type used to describe the format of pixels
/// in a given bitmap. Note that additional formats may be added
/// in the future.
///
/// <Fields>
/// ft_pixel_mode_mono   :: a monochrome bitmap (1 bit/pixel)
///
/// ft_pixel_mode_grays  :: an 8-bit gray-levels bitmap. Note that
/// the total number of gray levels is given
/// in the `num_grays' field of the FT_Bitmap
/// structure.
///
/// ft_pixel_mode_pal2   :: a 2-bit paletted bitmap.
/// currently unused by FreeType.
///
/// ft_pixel_mode_pal4   :: a 4-bit paletted bitmap.
/// currently unused by FreeType.
///
/// ft_pixel_mode_pal8   :: an 8-bit paletted bitmap.
/// currently unused by FreeType.
///
/// ft_pixel_mode_rgb15  :: a 15-bit RGB bitmap. Uses 5:5:5 encoding
/// currently unused by FreeType.
///
/// ft_pixel_mode_rgb16  :: a 16-bit RGB bitmap. Uses 5:6:5 encoding
/// currently unused by FreeType.
///
/// ft_pixel_mode_rgb24  :: a 24-bit RGB bitmap.
/// currently unused by FreeType.
///
/// ft_pixel_mode_rgb32  :: a 32-bit RGB bitmap.
/// currently unused by FreeType.
///
/// <Note>
/// Some anti-aliased bitmaps might be embedded in TrueType fonts
/// using formats pal2 or pal4, though no fonts presenting those
/// have been found to date..
abstract class FT_Pixel_Mode_ {
  static const int ft_pixel_mode_none = 0;
  static const int ft_pixel_mode_mono = 1;
  static const int ft_pixel_mode_grays = 2;
  static const int ft_pixel_mode_pal2 = 3;
  static const int ft_pixel_mode_pal4 = 4;
  static const int ft_pixel_mode_pal8 = 5;
  static const int ft_pixel_mode_rgb15 = 6;
  static const int ft_pixel_mode_rgb16 = 7;
  static const int ft_pixel_mode_rgb24 = 8;
  static const int ft_pixel_mode_rgb32 = 9;
  static const int ft_pixel_mode_max = 10;
}

/// <Enum>
/// FT_Palette_Mode
///
/// <Description>
/// An enumeration type used to describe the format of a bitmap
/// palette, used with ft_pixel_mode_pal4 and ft_pixel_mode_pal8
///
/// <Fields>
/// ft_palette_mode_rgb  :: the palette is an array of 3-bytes RGB records
///
/// ft_palette_mode_rgba :: the palette is an array of 4-bytes RGBA records
///
/// <Note>
/// As ft_pixel_mode_pal2, pal4 and pal8 are currently unused by
/// FreeType, these types are not handled by the library itself.
abstract class FT_Palette_Mode_ {
  static const int ft_palette_mode_rgb = 0;
  static const int ft_palette_mode_rgba = 1;
  static const int ft_palettte_mode_max = 2;
}

/// <Struct>
/// FT_Bitmap
///
/// <Description>
/// A structure used to describe a bitmap or pixmap to the raster.
/// Note that we now manage pixmaps of various depths through the
/// `pixel_mode' field.
///
/// <Fields>
/// rows         :: The number of bitmap rows.
///
/// width        :: The number of pixels in bitmap row.
///
/// pitch        :: The pitch's absolute value is the number of bytes
/// taken by one bitmap row, including padding. However,
/// the pitch is positive when the bitmap has a `down'
/// flow, and negative when it has an `up' flow. In all
/// cases, the pitch is an offset to add to a bitmap
/// pointer in order to go down one row.
///
/// buffer       :: A typeless pointer to the bitmap buffer. This value
/// should be aligned on 32-bit boundaries in most cases.
///
/// num_grays    :: this field is only used with ft_pixel_mode_grays,
/// it gives the number of gray levels used in the
/// bitmap.
///
/// pixel_mode   :: the pixel_mode, i.e. how pixel bits are stored
///
/// palette_mode :: this field is only used with paletted pixel modes,
/// it indicates how the palette is stored
///
/// palette      :: a typeless pointer to the bitmap palette. only used
/// for paletted pixel modes.
///
/// <Note>
/// When using pixel modes pal2, pal4 and pal8 with a void `palette'
/// field, a gray pixmap with respectively 4, 16 and 256 levels of gray
/// is assumed. This, in order to be compatible with some embedded bitmap
/// formats defined in the TrueType spec.
///
/// Note that no font was found presenting such embedded bitmaps, so this
/// is currently completely unhandled by the library.
final class FT_Bitmap_ extends ffi.Struct {
  @ffi.Int()
  external int rows;

  @ffi.Int()
  external int width;

  @ffi.Int()
  external int pitch;

  external ffi.Pointer<ffi.Void> buffer;

  @ffi.Short()
  external int num_grays;

  @ffi.Char()
  external int pixel_mode;

  @ffi.Char()
  external int palette_mode;

  external ffi.Pointer<ffi.Void> palette;
}

final class FT_Outline_ extends ffi.Struct {
  @ffi.Short()
  external int n_contours;

  @ffi.Short()
  external int n_points;

  external ffi.Pointer<FT_Vector> points;

  external ffi.Pointer<ffi.Char> flags;

  external ffi.Pointer<ffi.Short> contours;

  @ffi.Char()
  external int owner;

  @ffi.Char()
  external int high_precision;

  @ffi.Char()
  external int second_pass;

  @ffi.Char()
  external int dropout_mode;
}

typedef FT_Vector = FT_Vector_;

/// /
final class FT_Outline_Funcs_ extends ffi.Struct {
  external FT_Outline_MoveTo_Func move_to;

  external FT_Outline_LineTo_Func line_to;

  external FT_Outline_ConicTo_Func conic_to;

  external FT_Outline_CubicTo_Func cubic_to;
}

/// /
typedef FT_Outline_MoveTo_Func
    = ffi.Pointer<ffi.NativeFunction<FT_Outline_MoveTo_FuncFunction>>;
typedef FT_Outline_MoveTo_FuncFunction = ffi.Int Function(
    ffi.Pointer<FT_Vector> to, ffi.Pointer<ffi.Void> user);
typedef DartFT_Outline_MoveTo_FuncFunction = int Function(
    ffi.Pointer<FT_Vector> to, ffi.Pointer<ffi.Void> user);

/// /
typedef FT_Outline_LineTo_Func
    = ffi.Pointer<ffi.NativeFunction<FT_Outline_LineTo_FuncFunction>>;
typedef FT_Outline_LineTo_FuncFunction = ffi.Int Function(
    ffi.Pointer<FT_Vector> to, ffi.Pointer<ffi.Void> user);
typedef DartFT_Outline_LineTo_FuncFunction = int Function(
    ffi.Pointer<FT_Vector> to, ffi.Pointer<ffi.Void> user);

/// /
typedef FT_Outline_ConicTo_Func
    = ffi.Pointer<ffi.NativeFunction<FT_Outline_ConicTo_FuncFunction>>;
typedef FT_Outline_ConicTo_FuncFunction = ffi.Int Function(
    ffi.Pointer<FT_Vector> control,
    ffi.Pointer<FT_Vector> to,
    ffi.Pointer<ffi.Void> user);
typedef DartFT_Outline_ConicTo_FuncFunction = int Function(
    ffi.Pointer<FT_Vector> control,
    ffi.Pointer<FT_Vector> to,
    ffi.Pointer<ffi.Void> user);

/// /
typedef FT_Outline_CubicTo_Func
    = ffi.Pointer<ffi.NativeFunction<FT_Outline_CubicTo_FuncFunction>>;
typedef FT_Outline_CubicTo_FuncFunction = ffi.Int Function(
    ffi.Pointer<FT_Vector> control1,
    ffi.Pointer<FT_Vector> control2,
    ffi.Pointer<FT_Vector> to,
    ffi.Pointer<ffi.Void> user);
typedef DartFT_Outline_CubicTo_FuncFunction = int Function(
    ffi.Pointer<FT_Vector> control1,
    ffi.Pointer<FT_Vector> control2,
    ffi.Pointer<FT_Vector> to,
    ffi.Pointer<ffi.Void> user);

/// <Enum>
/// FT_Glyph_Tag
///
/// <Description>
/// An enumeration type used to describethe format of a given glyph
/// image. Note that this version of FreeType only supports two image
/// formats, even though future font drivers will be able to register
/// their own format.
///
/// <Fields>
/// ft_glyph_format_bitmap  :: the glyph image is a bitmap, and can
/// be described as a FT_Bitmap
///
/// ft_glyph_format_outline :: the glyph image is a vectorial image
/// made of bezier control points, and can
/// be described as a FT_Outline
abstract class FT_Glyph_Tag_ {
  static const int ft_glyph_format_none = 0;
  static const int ft_glyph_format_composite = 1668246896;
  static const int ft_glyph_format_bitmap = 1651078259;
  static const int ft_glyph_format_outline = 1869968492;
}

final class FT_RasterRec_ extends ffi.Opaque {}
